syntax = "proto3";

package com.zzsong.netty.grpc.hello;

option optimize_for = SPEED ;
option java_package = "com.zzsong.netty.grpc.hello";
option java_outer_classname = "HelloWorldServer";
option java_multiple_files = true;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    // Sends another greeting
    rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}